# CryptoCacher

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/config/: config.py
app/routes/: metrics_routes.py  price_routes.py
app/services/: binance_service.py  redis_service.py
tests/: locustfile.py
