[project]
name = "cryptocacher"
version = "0.1.0"
description = "A high-performance API service that caches Binance cryptocurrency data using Redis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "binance>=0.3",
    "redis>=4.0.2",
    "python-dotenv>=0.19.2",
    "fastapi[standard]>=0.115.8",
    "httpx>=0.28.1",
    "python-binance>=1.0.27",
    "pytest>=8.3.4",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.2.5", "pytest-asyncio>=0.15.1", "locust>=2.12.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
